# blockchain-firewall

firewall_plugin/: Cargo.toml
firewall_plugin/src/: lib.rs
json_rpc_proxy/: .env  Cargo.toml  firewall_plugin.wasm
json_rpc_proxy/config/: rules.yaml
json_rpc_proxy/src/: auth_middleware.rs  configs.rs  main.rs  router.rs  state.rs
json_rpc_proxy/src/auth/: jwt.rs
json_rpc_proxy/src/config/: filter_config.rs  mod.rs  reloader.rs
json_rpc_proxy/src/handler/: auth.rs
json_rpc_proxy/src/handlers/: auth.rs  chain_router.rs  mod.rs  rpc.rs
json_rpc_proxy/src/services/: gas_filter.rs  mod.rs  proxy.rs  rate_limiter.rs
json_rpc_proxy/src/services/multichain/: adapter.rs  aptos.rs  ethereum.rs  mod.rs  router.rs  solana.rs  sui.rs
json_rpc_proxy/src/utils/: logger.rs  metrics.rs  mod.rs
json_rpc_proxy/src/wasm/: plugin_engine.rs
