[package]
name = "json_rpc_proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
hyper = "1.6.0"

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
dotenv = "0.15"
anyhow = "1.0"
serde_yaml = "0.9"
once_cell = "1"

redis = { version = "0.25", features = ["tokio-comp"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

jsonwebtoken = "9.2"
tower-cookies = "0.11.0"

prometheus = "0.13"
lazy_static = "1.4"
bytes = "1.10.1"
http-body = "1.0.1"

notify = "6"

wasmtime = "16"
wasmtime-wasi = { version = "16", features = ["sync"] }


